force-app/main/default/objects/Opportunity/fields/Cases_Received_RGN_Archived__c.field-meta.xml
<CustomField>
    <fullName>Cases_Received_RGN_Archived__c</fullName>
    <description>Number of RGN Archived cases received (exclude cases committed in this collaboration)</description>
    <label>Cases Received (RGN Archived) (S)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>