force-app/main/default/objects/Opportunity/fields/Cases_Sequenced_RGN_Archived_RollUp__c.field-meta.xml
<CustomField>
    <fullName>Cases_Sequenced_RGN_Archived_RollUp__c</fullName>
    <label>Cases Sequenced (RGN Archived) (M)</label>
    <summarizedField>Collaboration_Details_by_Institution__c.Cases_Sequenced_RGN_Archived__c</summarizedField>
    <summaryForeignKey>Collaboration_Details_by_Institution__c.Collaboration_Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>