force-app/main/default/objects/Opportunity/fields/CES_Collaboration__c.field-meta.xml
<CustomField>
    <fullName>CES_Collaboration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added by Ciberspring 5.31.24</description>
    <label>CES Collaboration</label>
    <type>Checkbox</type>
</CustomField>