force-app/main/default/objects/Opportunity/fields/Champion__c.field-meta.xml
<CustomField>
    <fullName>Champion__c</fullName>
    <formula>RGC_Champion__r.FirstName  &amp; &quot; &quot; &amp; RGC_Champion__r.LastName &amp;  
&quot;; &quot; &amp;  RGC_Co_Champion1__r.FirstName &amp; &quot; &quot; &amp; RGC_Co_Champion1__r.LastName &amp;
&quot;; &quot; &amp;  RGC_Co_Champion2__r.FirstName &amp; &quot; &quot; &amp; RGC_Co_Champion2__r.LastName &amp;
&quot;; &quot; &amp;  RGC_Co_Champion__r.FirstName &amp; &quot; &quot; &amp; RGC_Co_Champion__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Champion</label>
    <type>Text</type>
</CustomField>