force-app/main/default/objects/Opportunity/fields/Chronic_Liver_Disease__c.field-meta.xml
<CustomField>
    <fullName>Chronic_Liver_Disease__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chronic Liver Disease</label>
    <type>Checkbox</type>
</CustomField>