force-app/main/default/objects/Opportunity/fields/Cohort_Description__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Description__c</fullName>
    <label>Cohort Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>