force-app/main/default/objects/Opportunity/fields/Collab_have_license_to_RGC_inventions__c.field-meta.xml
<CustomField>
    <fullName>Collab_have_license_to_RGC_inventions__c</fullName>
    <label>Collab have license to RGC inventions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>