force-app/main/default/objects/Opportunity/fields/Collaboration_Agreement_ready_for_Legal__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Agreement_ready_for_Legal__c</fullName>
    <description>Formerly &quot;RCA Ready for Legal Review&quot; changed by JG April 2020</description>
    <label>RCA Finalized Date</label>
    <type>Date</type>
</CustomField>