force-app/main/default/objects/Opportunity/fields/Collaboration_Data_Access_and_IT__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Data_Access_and_IT__c</fullName>
    <label>Data Access &amp; IT Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Completed</fullName>
                <default>true</default>
                <label>Not Completed</label>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>