force-app/main/default/objects/Opportunity/fields/Collaboration_Description_Other__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Description_Other__c</fullName>
    <description>If Collaboration Description is Other then please provide value for this field</description>
    <label>Collaboration Disease Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>