force-app/main/default/objects/Opportunity/fields/Collaboration_Description_Text__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Description_Text__c</fullName>
    <label>Collaboration Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>