force-app/main/default/objects/Opportunity/fields/Collaboration_Description_w_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Description_w_Amendment__c</fullName>
    <label>Collaboration Description w/ Amendment</label>
    <type>TextArea</type>
</CustomField>