force-app/main/default/objects/Opportunity/fields/Collaboration_ID__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_ID__c</fullName>
    <description>System-generated unique ID, human-readable</description>
    <displayFormat>Collaboration ID-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Collaboration ID</label>
    <type>AutoNumber</type>
</CustomField>