force-app/main/default/objects/Opportunity/fields/Collaboration_Institution_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Institution_Name_Text__c</fullName>
    <label>Collaboration Institution Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>