force-app/main/default/objects/Opportunity/fields/Collaboration_Oppty_Unique_Id_for_Dup__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Oppty_Unique_Id_for_Dup__c</fullName>
    <description>Duplicate Collaboration Opportunity is identified by Unique collaboration Name and Institution Name</description>
    <label>Collaboration Oppty Unique Id for Dup</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>