force-app/main/default/objects/Opportunity/fields/Collaboration_Scope_Other__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Scope_Other__c</fullName>
    <description>If Collaboration Scope is Other then please provide value for this field</description>
    <inlineHelpText>If Collaboration Scope is Other then please provide value for this field</inlineHelpText>
    <label>Collaboration Scope Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>