force-app/main/default/objects/Opportunity/fields/Collaboration_Scope_Term__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Scope_Term__c</fullName>
    <label>Collaboration Scope</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Completed</fullName>
                <default>true</default>
                <label>Not Completed</label>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>