force-app/main/default/objects/Opportunity/fields/Collaboration_Scope_Text__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Scope_Text__c</fullName>
    <label>Collaboration Scope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>