force-app/main/default/objects/Opportunity/fields/Collaboration_Scope_w_Amendments__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Scope_w_Amendments__c</fullName>
    <label>Collaboration Scope w/ Amendments</label>
    <type>TextArea</type>
</CustomField>