force-app/main/default/objects/Opportunity/fields/Collaboration_Status_1__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Status_1__c</fullName>
    <label>Collaboration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Potential</fullName>
                <default>true</default>
                <label>Potential</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Quarterly Outreach</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <label>Terminated</label>
            </value>
            <value>
                <fullName>End of Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>