force-app/main/default/objects/Opportunity/fields/Collaboration_Status__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Status__c</fullName>
    <defaultValue>&quot;Requested&quot;</defaultValue>
    <description>Status -critical for notifications, dashboards and reports</description>
    <label>Collaboration Agreement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
                <isActive>false</isActive>
                <label>Active</label>
            </value>
            <value>
                <fullName>Potential</fullName>
                <isActive>false</isActive>
                <label>Potential</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>