force-app/main/default/objects/Opportunity/fields/Collaboration_Status_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Status_Updated_Date__c</fullName>
    <description>JG April 2020</description>
    <label>Collaboration Status Updated Date</label>
    <type>Date</type>
</CustomField>