force-app/main/default/objects/Opportunity/fields/Collaboration_Term__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Term__c</fullName>
    <description>Duration of Collaboration</description>
    <label>Collaboration Term (Years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>