force-app/main/default/objects/Opportunity/fields/Collaboration_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Type_Other__c</fullName>
    <description>If Collaboration Type is Other then please provide value for this field</description>
    <inlineHelpText>If Collaboration Type is Other then please provide value for this field</inlineHelpText>
    <label>Collaboration Type Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>