force-app/main/default/objects/Opportunity/fields/Collaboration_Type_Text__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Type_Text__c</fullName>
    <description>This is to populate in summary tab in collaboration opportunity [Value will be populated based on details tab fields and update through workflow rule]</description>
    <label>Collaboration Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>