force-app/main/default/objects/Opportunity/fields/Collaborator_Key__c.field-meta.xml
<CustomField>
    <fullName>Collaborator_Key__c</fullName>
    <externalId>true</externalId>
    <label>Collaborator Key</label>
    <length>30</length>
    <type>Text</type>
</CustomField>