force-app/main/default/objects/Opportunity/fields/Collaborator_Scientific_Contact_Names__c.field-meta.xml
<CustomField>
    <fullName>Collaborator_Scientific_Contact_Names__c</fullName>
    <description>This field is populated by DLRS</description>
    <label>Collaborator Scientific Contact</label>
    <type>TextArea</type>
</CustomField>