force-app/main/default/objects/Opportunity/fields/Controls_Archived__c.field-meta.xml
<CustomField>
    <fullName>Controls_Archived__c</fullName>
    <description>Number of samples to be used as controls already available at institution</description>
    <label>Controls (Archived) (S)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>