force-app/main/default/objects/Opportunity/fields/Controls_Archived_All__c.field-meta.xml
<CustomField>
    <fullName>Controls_Archived_All__c</fullName>
    <description>Used to combine values the separate fields used in either single or multi institution collaborations to one field for reporting.</description>
    <formula>IF( Controls_Archived_RollUp__c != 0 || Controls_Archived_RollUp__c != null, Controls_Archived_RollUp__c,
Controls_Archived__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Controls (Archived)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>