force-app/main/default/objects/Opportunity/fields/Controls_Prospective__c.field-meta.xml
<CustomField>
    <fullName>Controls_Prospective__c</fullName>
    <description>Number of additional samples to be used as controls not yet available at institution, anticipated to be available for collaboration</description>
    <label>Controls (Prospective) (S)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>