force-app/main/default/objects/Opportunity/fields/Controls_Prospective_All__c.field-meta.xml
<CustomField>
    <fullName>Controls_Prospective_All__c</fullName>
    <description>Used to combine values the separate fields used in either single or multi institution collaborations to one field for reporting.</description>
    <formula>IF( Controls_Prospective_RollUp__c != 0 || Controls_Prospective_RollUp__c != null, Controls_Prospective_RollUp__c,
Controls_Prospective__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Controls (Prospective)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>