force-app/main/default/objects/Opportunity/fields/Controls_Received_Committed__c.field-meta.xml
<CustomField>
    <fullName>Controls_Received_Committed__c</fullName>
    <description>Number of committed cases received</description>
    <label>Controls Received (Committed) (S)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>