force-app/main/default/objects/Opportunity/fields/Controls_Received_Committed_rollup__c.field-meta.xml
<CustomField>
    <fullName>Controls_Received_Committed_rollup__c</fullName>
    <label>Controls Received (Committed) (M)</label>
    <summarizedField>Collaboration_Details_by_Institution__c.Controls_Received_Committed__c</summarizedField>
    <summaryForeignKey>Collaboration_Details_by_Institution__c.Collaboration_Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>