force-app/main/default/objects/Opportunity/fields/Controls_Received_RGN_Archived__c.field-meta.xml
<CustomField>
    <fullName>Controls_Received_RGN_Archived__c</fullName>
    <description>Number of RGN Archived controls received (exclude cases committed in this collaboration)</description>
    <label>Controls Received (RGN Archived) (S)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>