force-app/main/default/objects/Opportunity/fields/Controls_Sequenced_Committed__c.field-meta.xml
<CustomField>
    <fullName>Controls_Sequenced_Committed__c</fullName>
    <description>Number of committed cases sequenced</description>
    <label>Controls Sequenced (Committed) (S)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>