force-app/main/default/objects/Opportunity/fields/COSO_US_Non_US__c.field-meta.xml
<CustomField>
    <fullName>COSO_US_Non_US__c</fullName>
    <description>US vs Non- US sample origin - required for automated ABAC notification workflows</description>
    <label>Country of Shipment Origin US/Non-US</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-US</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>