force-app/main/default/objects/Opportunity/fields/Cost_per_Year_Agreed__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_Year_Agreed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total cost agreed in RCA Negotiations split out by year</description>
    <label>Cost / Year - Agreed (S)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>