force-app/main/default/objects/Opportunity/fields/Cost_per_Year_Agreed_All__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_Year_Agreed_All__c</fullName>
    <description>Used to combine values the separate fields used in either single or multi institution collaborations to one field for reporting.</description>
    <formula>IF( Cost_per_Year_Agreed_RollUp__c != 0 || Cost_per_Year_Agreed_RollUp__c != null, Cost_per_Year_Agreed_RollUp__c,
Cost_per_Year_Agreed__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost / Year - Agreed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>