force-app/main/default/objects/Opportunity/fields/Cost_per_Year_Collaborator_Proposed__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_Year_Collaborator_Proposed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total cost proposed by Collaborator in Initial Assessment split out by year</description>
    <label>Cost / Year - Collaborator Proposed (S)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>