force-app/main/default/objects/Opportunity/fields/Cost_per_Year_Collaborator_Proposed_Roll__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_Year_Collaborator_Proposed_Roll__c</fullName>
    <label>Cost / Year - Collaborator Proposed (M)</label>
    <summarizedField>Collaboration_Details_by_Institution__c.Cost_per_Year_Collaborator_Proposed__c</summarizedField>
    <summaryForeignKey>Collaboration_Details_by_Institution__c.Collaboration_Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>